--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 	<meta name="description" content="CSGO Server">
 	<meta name="theme-color" content="#6cc312">
 	<link rel="shortcut icon" href="https://VHMING.NET/favicon.ico">
-	<link rel="stylesheet" href="./vhming.tk_files/assets/bootstrap/bootstrap.min.css"
+	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css"
 		integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-	<link href="./vhming.tk_files/assets/css/style1.css" rel="stylesheet">
-	<link href="./vhming.tk_files/assets/css/cover.css" rel="stylesheet">
-	<link href="./vhming.tk_files/assets/css/glitch.css" rel="stylesheet">
-	<link href="./vhming.tk_files/assets/css/style2.css" rel="stylesheet">
+	<link href="./assets/css/style1.css" rel="stylesheet">
+	<link href="./assets/css/cover.css" rel="stylesheet">
+	<link href="./assets/css/glitch.css" rel="stylesheet">
+	<link href="./assets/css/style2.css" rel="stylesheet">
 
 	<!-- <style type="text/css" id="operaUserStyle"></style> -->
 	<style type="text/css">
@@ -87,7 +87,7 @@
 		:root a[href^="https://financeads.net/tc.php?"],
 		:root a[href^="https://www.mrskin.com/tour"],
 		:root a[href^="https://www.kingsoffetish.com/tour?partner_id="],
-		:root a[href^="https://www.infowarsstore.com/" ./vhming.tk_files/img/,
+		:root a[href^="https://www.infowarsstore.com/" ./img/,
 		:root a[href^="https://www.highperformancegate.com/"],
 		:root a[href^="https://t.grtyi.com/"],
 		:root a[href^="https://www.highperformancecpmgate.com/"],
@@ -108,14 +108,14 @@
 		:root a[href^="https://tracking.avapartner.com/"],
 		:root a[href^="https://track.afcpatrk.com/"],
 		:root a[href^="https://track.adform.net/"],
-		:root a[href^="https://torguard.net/aff.php" ./vhming.tk_files/img/,
+		:root a[href^="https://torguard.net/aff.php" ./img/,
 		:root [data-role="tile-ads-module"],
 		:root a[href^="https://adsrv4k.com/"],
 		:root a[href^="https://go.xlviirdr.com"],
 		:root a[href^="https://thaudray.com/"],
 		:root a[href^="https://taghaugh.com/"],
 		:root a[href^="https://go.trackitalltheway.com/"],
-		:root [href^="https://track.fiverr.com/visit/" ./vhming.tk_files/img/,
+		:root [href^="https://track.fiverr.com/visit/" ./img/,
 		:root a[href^="https://syndication.exoclick.com/"],
 		:root a[href^="https://syndication.dynsrvtbg.com/"],
 		:root a[href^="https://streamate.com/landing/click/"],
@@ -123,9 +123,9 @@
 		:root a[href^="https://static.fleshlight.com/images/banners/"],
 		:root a[href^="https://go.strpjmp.com/"],
 		:root a[href^="https://refpa4903566.top/"],
-		:root a[href^="https://prf.hn/click/"][href*="/camref:" ./vhming.tk_files/img/,
+		:root a[href^="https://prf.hn/click/"][href*="/camref:" ./img/,
 		:root a[href^="https://serve.awmdelivery.com/"],
-		:root a[href^="https://prf.hn/click/"][href*="/adref:" ./vhming.tk_files/img/,
+		:root a[href^="https://prf.hn/click/"][href*="/adref:" ./img/,
 		:root a[href^="https://www.rabbits.webcam/?id="],
 		:root [href^="https://r.kraken.com/"],
 		:root a[href^="https://mmwebhandler.aff-online.com/"],
@@ -136,7 +136,7 @@
 		:root div[id^="ad_position_"],
 		:root a[href^="https://ovb.im/"],
 		:root a[href^="https://natour.naughtyamerica.com/track/"],
-		:root [href^="https://www.herbanomic.com/" ./vhming.tk_files/img/,
+		:root [href^="https://www.herbanomic.com/" ./img/,
 		:root a[href^="https://maymooth-stopic.com/"],
 		:root a[href^="https://loboclick.com"],
 		:root [href^="https://routewebtk.com/"],
@@ -158,7 +158,7 @@
 		:root a[href^="https://go.xxxiijmp.com"],
 		:root a[href^="https://go.xtbaffiliates.com/"],
 		:root a[href^="https://ismlks.com/"],
-		:root [href^="https://www.mypillow.com/" ./vhming.tk_files/img/,
+		:root [href^="https://www.mypillow.com/" ./img/,
 		:root a[href^="https://azpresearch.club/"],
 		:root a[href^="https://go.xlirdr.com"],
 		:root [data-css-class="dfp-inarticle"],
@@ -167,7 +167,7 @@
 		:root a[href^="https://go.skinstrip.net"][href*="?campaignId="],
 		:root a[href^="https://go.markets.com/visit/?bta="],
 		:root a[href^="//lambingsyddir.com/"],
-		:root a[href^="https://billing.purevpn.com/aff.php" ./vhming.tk_files/img/,
+		:root a[href^="https://billing.purevpn.com/aff.php" ./img/,
 		:root a[href^="https://go.hpyrdr.com/"],
 		:root a[href^="https://go.goaserv.com/"],
 		:root a[href^="https://track.wg-aff.com"],
@@ -176,7 +176,7 @@
 		:root a[href^="https://go.admjmp.com/"],
 		:root a[href^="https://www.nutaku.net/signup/landing/"],
 		:root [href^="https://kingered-banctours.com/"],
-		:root a[href^="https://get.surfshark.net/aff_c?"][href*="&aff_id=" ./vhming.tk_files/img/,
+		:root a[href^="https://get.surfshark.net/aff_c?"][href*="&aff_id=" ./img/,
 		:root a[href^="https://affiliate.rusvpn.com/click.php?"],
 		:root a[href^="https://geniusdexchange.com/"],
 		:root a[href^="https://go.gldrdr.com/"],
@@ -203,7 +203,7 @@
 		:root AD-TRIPLE-BOX,
 		:root a[href^="https://click.hoolig.app/"],
 		:root a[href^="https://track.totalav.com/"],
-		:roo./vhming.tk_files/img/[src^="https://images.purevpnaffiliates.com"],
+		:roo./img/[src^="https://images.purevpnaffiliates.com"],
 		:root a[href^="https://porntubemate.com/"],
 		:root a[href^="http://www.gfrevenge.com/landing/"],
 		:root a[href^="https://clickadilla.com/"],
@@ -229,12 +229,12 @@
 		:root a[href^="https://batheunits.com/"],
 		:root a[target="_blank"][onmousedown="this.href^='http://paid.outbrain.com/network/redir?"],
 		:root a[href^="https://banners.livepartners.com/"],
-		:root a[href^="https://m.do.co/c/" ./vhming.tk_files/img/,
-		:root [href="https://masstortfinancing.com" ./vhming.tk_files/img/,
+		:root a[href^="https://m.do.co/c/" ./img/,
+		:root [href="https://masstortfinancing.com" ./img/,
 		:root a[href^="https://bongacams10.com/track?"],
 		:root a[href^="https://albionsoftwares.com/"],
 		:root a[href^="https://t.hrtye.com/"],
-		:root a[href^="https://go.etoro.com/" ./vhming.tk_files/img/,
+		:root a[href^="https://go.etoro.com/" ./img/,
 		:root a[href^="https://join.sexworld3d.com/track/"],
 		:root a[href^="https://intenseaffiliates.com/redirect/"],
 		:root a[href^="https://aweptjmp.com/"],
@@ -246,21 +246,21 @@
 		:root a[href^="https://adjoincomprise.com/"],
 		:root [href^="http://misslinkvocation.com/"],
 		:root a[href^="https://adclick.g.doubleclick.net/"],
-		:root a[href^="https://go.nordvpn.net/aff" ./vhming.tk_files/img/,
+		:root a[href^="https://go.nordvpn.net/aff" ./img/,
 		:root a[href^="https://misspkl.com/"],
 		:root [href^="http://clicks.totemcash.com/"],
-		:root a[href^="https://ad.zanox.com/ppc/" ./vhming.tk_files/img/,
+		:root a[href^="https://ad.zanox.com/ppc/" ./img/,
 		:root a[href^="https://ad.kubiccomps.icu/"],
 		:root a[href^="https://adswick.com/"],
 		:root a[href^="https://refpazkjixes.top/"],
 		:root a[href^="https://ad.atdmt.com/"],
 		:root [data-m-ad-id],
 		:root a[href^="https://a-ads.com/"],
-		:root [href^="https://www.avantlink.com/click.php" ./vhming.tk_files/img/,
+		:root [href^="https://www.avantlink.com/click.php" ./img/,
 		:root iframe[src^="https://pagead2.googlesyndication.com/"],
 		:root a[href^="http://www.onwebcam.com/random?t_link="],
 		:root a[href^="http://trk.globwo.online/"],
-		:root a[href^="https://prf.hn/click/"][href*="/creativeref:" ./vhming.tk_files/img/,
+		:root a[href^="https://prf.hn/click/"][href*="/creativeref:" ./img/,
 		:root a[href^="http://www.adultempire.com/unlimited/promo?"][href*="&partner_id="],
 		:root a[href^="http://tour.mrskin.com/"],
 		:root a[href^="https://join.virtualtaboo.com/track/"],
@@ -314,7 +314,7 @@
 		:root a[href^="https://a.bestcontentfood.top/"],
 		:root a[href^="https://reinstandpointdumbest.com/"],
 		:root a[data-obtrack^="http://paid.outbrain.com/network/redir?"],
-		:root [href^="https://goldforyourfuture.com/clk.trk" ./vhming.tk_files/img/,
+		:root [href^="https://goldforyourfuture.com/clk.trk" ./img/,
 		:root a[href^="http://wct.link/"],
 		:root [href^="https://infinitytrk.com/"],
 		:root [onclick^="location.href='http://www.reimageplus.com"],
@@ -322,7 +322,7 @@
 		:root .commercial-unit-mobile-top>div[data-pla="1"],
 		:root a[href^="https://www.sweetdeals.com"],
 		:root a[href^="https://t.aslnk.link/"],
-		:root [href^="https://zstacklife.com/" ./vhming.tk_files/img/,
+		:root [href^="https://zstacklife.com/" ./img/,
 		:root [id^="chp_ads_block"],
 		:root a[href^="https://go.julrdr.com/"],
 		:root .trc_rbox_div .syndicatedItemUB,
@@ -334,21 +334,21 @@
 		:root [data-ad-manager-id],
 		:root a[href^="https://fleshlight.sjv.io/"],
 		:root div[id^="zergnet-widget"],
-		:root [href^="https://www.mystore.com/" ./vhming.tk_files/img/,
+		:root [href^="https://www.mystore.com/" ./img/,
 		:root div[id^="ad-position-"],
 		:root a[href^="http://adultfriendfinder.com/go/page/landing"],
 		:root a[href^="http://affiliate.glbtracker.com/"],
 		:root a[href^="https://leg.xyz/?track="],
 		:root a[href^="http://bc.vc/?r="],
-		:root [href^="https://www.brighteonstore.com/products/" ./vhming.tk_files/img/,
-		:root a[href^="https://www.privateinternetaccess.com/" ./vhming.tk_files/img/,
+		:root [href^="https://www.brighteonstore.com/products/" ./img/,
+		:root a[href^="https://www.privateinternetaccess.com/" ./img/,
 		:root a[href*=".trust.zone"],
 		:root [href^="https://shrugartisticelder.com"],
 		:root div[id^="crt-"][style],
 		:root a[href^="http://adultgames.xxx/"],
 		:root a[href^="https://traffic.bannerator.com/"],
-		:root [href^="https://shiftnetwork.infusionsoft.com/go/" ./vhming.tk_files/img/,
-		:root [href^="https://www.mypatriotsupply.com/" ./vhming.tk_files/img/,
+		:root [href^="https://shiftnetwork.infusionsoft.com/go/" ./img/,
+		:root [href^="https://www.mypatriotsupply.com/" ./img/,
 		:root a[onmousedown^="this.href='http://paid.outbrain.com/network/redir?"][target="_blank"],
 		:root [href^="https://secure.bmtmicro.com/servlets/"],
 		:root a[href^="https://losingoldfry.com/"],
@@ -357,31 +357,31 @@
 		:root a[href^="https://awptjmp.com/"],
 		:root a[href^="https://go.goasrv.com/"],
 		:root .commercial-unit-mobile-top>.v7hl4d,
-		:root [href^="http://mypillow.com/" ./vhming.tk_files/img/,
+		:root [href^="http://mypillow.com/" ./img/,
 		:root a[href^="http://bongacams.com/track?"],
 		:root a[href^="https://mediaserver.entainpartners.com/renderBanner.do?"],
 		:root [href^="https://stvkr.com/"],
 		:root a[href^="https://promo-bc.com/"],
 		:root a[href^="https://clicks.pipaffiliates.com/"],
-		:root [href^="https://noqreport.com/" ./vhming.tk_files/img/,
+		:root [href^="https://noqreport.com/" ./img/,
 		:root a[href^="https://go.hpyjmp.com"],
 		:root ADS-RIGHT,
-		:root [href^="https://mystore.com/" ./vhming.tk_files/img/,
-		:root [href^="https://mypatriotsupply.com/" ./vhming.tk_files/img/,
-		:root [href^="https://mylead.global/stl/" ./vhming.tk_files/img/,
+		:root [href^="https://mystore.com/" ./img/,
+		:root [href^="https://mypatriotsupply.com/" ./img/,
+		:root [href^="https://mylead.global/stl/" ./img/,
 		:root #leader-companion>a[href],
 		:root a[href^="https://transfer.xe.com/signup/track/redirect?"],
 		:root .vid-present>.van_vid_carousel__padding,
 		:root app-ad,
 		:root a[href^="https://go.xxxijmp.com"],
 		:root [href^="https://istlnkcl.com/"],
-		:root [href^="https://www.hostg.xyz/" ./vhming.tk_files/img/,
+		:root [href^="https://www.hostg.xyz/" ./img/,
 		:root .section-subheader>.section-hotel-prices-header,
 		:root [href^="http://join.ts-dominopresley.com/"],
 		:root [href^="https://go.affiliatexe.com/"],
 		:root [href^="https://go.4rabettraff.com/"],
 		:root [href^="https://glersakr.com/"],
-		:root [href="https://ourgoldguy.com/contact/" ./vhming.tk_files/img/,
+		:root [href="https://ourgoldguy.com/contact/" ./img/,
 		:root a[href^="https://1startfiledownload1.com/"],
 		:root a[href^="https://wittered-mainging.com/"],
 		:root [href^="https://engine.gettopple.com/"],
@@ -389,7 +389,7 @@
 		:root a[href^="https://k2s.cc/pr/"],
 		:root [href^="https://affect3dnetwork.com/track/"],
 		:root a[href^="https://go.currency.com/"],
-		:root [href^="http://www.mypillow.com/" ./vhming.tk_files/img/,
+		:root [href^="http://www.mypillow.com/" ./img/,
 		:root [href^="https://v.investologic.co.uk/"],
 		:root [href^="https://cipledecline.buzz/"],
 		:root [href^="http://join.trannies-fuck.com/"],
@@ -401,11 +401,11 @@
 		:root div[data-role="sidebarAd"],
 		:root [href^="https://join3.bannedsextapes.com"],
 		:root div[data-spotim-slot],
-		:root [href^="https://antiagingbed.com/discount/" ./vhming.tk_files/img/,
+		:root [href^="https://antiagingbed.com/discount/" ./img/,
 		:root a[href^="https://go.247traffic.com/"],
 		:root [href^="https://join.girlsoutwest.com/"],
 		:root [href^="http://trafficare.net/"],
-		:root a[href^="https://tc.tradetracker.net/" ./vhming.tk_files/img/,
+		:root a[href^="https://tc.tradetracker.net/" ./img/,
 		:root a[href^="https://adserver.adreactor.com/"],
 		:root [href^="http://join.shemalesfromhell.com/"],
 		:root [id^="ad_slider"],
@@ -432,7 +432,7 @@
 		:root #slashboxes>.deals-rail,
 		:root [href^="http://globsads.com/"],
 		:root [href^="https://safer-redirection.com"],
-		:root [href^="https://optimizedelite.com/" ./vhming.tk_files/img/,
+		:root [href^="https://optimizedelite.com/" ./img/,
 		:root [data-name="adaptiveConstructorAd"],
 		:root [href^="//ngeoziadiyc4hi2e.com/"],
 		:root a[href^="https://go.xxxjmp.com"],
@@ -441,16 +441,16 @@
 		:root [href^="https://traffserve.com/"],
 		:root #kt_player>a[target="_blank"],
 		:root a[href^="https://www.awin1.com/cread.php?awinaffid="],
-		:root [href="https://www.masstortfinancing.com/" ./vhming.tk_files/img/,
-		:root [href^="https://mypillow.com/" ./vhming.tk_files/img/,
+		:root [href="https://www.masstortfinancing.com/" ./img/,
+		:root [href^="https://mypillow.com/" ./img/,
 		:root [href^="https://ad.admitad.com/"],
 		:root a[href^="https://u.expresstech.io/"],
-		:root [href="https://jdrucker.com/gold" ./vhming.tk_files/img/,
+		:root [href="https://jdrucker.com/gold" ./img/,
 		:root a[href^="https://www.iyalc.com/"],
 		:root a[href^="https://track.ultravpn.com/"],
 		:root [href^="https://goldcometals.com/clk.trk"],
 		:root [data-mobile-ad-id],
-		:root a[href^="http://tc.tradetracker.net/" ./vhming.tk_files/img/,
+		:root a[href^="http://tc.tradetracker.net/" ./img/,
 		:root a[href^="http://affiliates.thrixxx.com/"],
 		:root #searchResultsList>div>div[onclick$="'inline.ad'});"],
 		:root a[href^="https://go.xlivrdr.com"],
@@ -466,7 +466,7 @@
 		:root [href^="http://residenceseeingstanding.com/"],
 		:root div[data-adunit],
 		:root app-large-ad,
-		:root [href^="https://turtlebids.irauctions.com/" ./vhming.tk_files/img/,
+		:root [href^="https://turtlebids.irauctions.com/" ./img/,
 		:root [href^="https://www.cloudways.com/en/?id"],
 		:root [class^="amp-ad-"],
 		:root [data-ez-name],
@@ -493,7 +493,7 @@
 		:root a[href^="http://partners.etoro.com/"],
 		:root [data-advadstrackid],
 		:root a[href^="https://a2.adform.net/"],
-		:root [href^="https://affiliate.fastcomet.com/" ./vhming.tk_files/img/,
+		:root [href^="https://affiliate.fastcomet.com/" ./img/,
 		:root #atvcap+#tvcap>.mnr-c>.commercial-unit-mobile-top,
 		:root a[href^="http://traffic.tc-clicks.com/"],
 		:root a[href^="https://traffdaq.com/"],
@@ -508,18 +508,18 @@
 	</style>
 </head>
 
-<body class="text-center" data-vide-bg="./vhming.tk_files/assets/img/bg">
+<body class="text-center" data-vide-bg="./assets/img/bg">
 	<div
 		style="position: absolute; z-index: -1; inset: 0px; overflow: hidden; background-size: cover; background-color: transparent; background-repeat: no-repeat; background-position: 50% 50%; background-image: none;">
 		<video autoplay="" loop="" muted="" <video autoplay="" loop="" muted=""
 			style="margin: auto; position: absolute; z-index: -1; top: 50%; left: 50%; transform: translate(-50%, -50%); visibility: visible; opacity: 1; width: auto; height: auto;">
-			<!-- <source src="./vhming.tk_files/assets/img/bg.mp4" type="video/mp4"> -->
-			<!-- <source src="./vhming.tk_files/assets/img/bg.webm" type="video/webm"> -->
-			<!-- <source src="./vhming.tk_files/assets/img/bg.ogv" type="video/ogg"> -->
+			<!-- <source src="./assets/img/bg.mp4" type="video/mp4"> -->
+			<!-- <source src="./assets/img/bg.webm" type="video/webm"> -->
+			<!-- <source src="./assets/img/bg.ogv" type="video/ogg"> -->
 		</video>
 	</div>
 	<audio id="player" loop="">
-		<source src="./vhming.tk_files/assets/img/blunts.webm" type="audio/webm" volume="0.5">
+		<source src="./assets/img/blunts.webm" type="audio/webm" volume="0.5">
 	</audio>
 	<div class="overlay">
 		<section>
@@ -580,13 +580,13 @@
 			</div>
 		</footer>
 	</div>
-	<script src="./vhming.tk_files/assets/js/jquery-3.5.1.min.js"
+	<script src="./assets/js/jquery-3.5.1.min.js"
 		integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-	<script src="./vhming.tk_files/assets/bootstrap/bootstrap.min.css"
+	<script src="./assets/bootstrap/bootstrap.min.css"
 		integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
 		crossorigin="anonymous"></script>
-	<script src="./vhming.tk_files/assets/js/jquery.vide.js"></script>
-	<script src="./vhming.tk_files/assets/js/script.js"></script>
+	<script src="./assets/js/jquery.vide.js"></script>
+	<script src="./assets/js/script.js"></script>
 	<script>
 		const position = document.documentElement;
 		position.addEventListener("mousemove", e => {
@@ -595,7 +595,7 @@
 	</script>
 	<script>(function () { var js = "window['__CF$cv$params']={r:'79417702cc740506',m:'oWD2gZ2LoE7.KGV4GlDHF1boKwdQD6UHCZh14pA1OkE-1675493351-0-AZ86LcY+TalmMxvEY73PKIBUP+T4FVdn2k9l3m9WsvAoJLlzq0aon2yUBWT4TOiv/u1Ibw48ZGhmWllvUKUbK4Aew2rrRg6IDB9jZPI3XNcGsCuwWM+ncpfG7x8kLZNN9A==',s:[0xbee0f0ef3c,0x8c8a533c39],u:'/cdn-cgi/challenge-platform/h/b'};var _cpo=document.createElement('script');_cpo.nonce='',_cpo.src='/cdn-cgi/challenge-platform/h/b/scripts/cb/invisible.js?cb=79417702cc740506',document.getElementsByTagName('head')[0].appendChild(_cpo);"; var _0xh = document.createElement('iframe'); _0xh.height = 1; _0xh.width = 1; _0xh.style.position = 'absolute'; _0xh.style.top = 0; _0xh.style.left = 0; _0xh.style.border = 'none'; _0xh.style.visibility = 'hidden'; document.body.appendChild(_0xh); function handler() { var _0xi = _0xh.contentDocument || _0xh.contentWindow.document; if (_0xi) { var _0xj = _0xi.createElement('script'); _0xj.nonce = ''; _0xj.innerHTML = js; _0xi.getElementsByTagName('head')[0].appendChild(_0xj); } } if (document.readyState !== 'loading') { handler(); } else if (window.addEventListener) { document.addEventListener('DOMContentLoaded', handler); } else { var prev = document.onreadystatechange || function () { }; document.onreadystatechange = function (e) { prev(e); if (document.readyState !== 'loading') { document.onreadystatechange = prev; handler(); } }; } })();</script>
 	<!-- <iframe height="1" width="1" style="position: absolute; top: 0px; left: 0px; border: none; visibility: hidden;"
-		src="./vhming.tk_files/saved_resource.html"></iframe> -->
+		src="./saved_resource.html"></iframe> -->
 
 </body>
 
